2011-07-23  Dimitri Glazkov  <dglazkov@chromium.org>

        TestConfiguration should be hashable and comparable for equality.
        https://bugs.webkit.org/show_bug.cgi?id=65070

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_configuration.py: Added __hash__ and __eq__ methods.
        * Scripts/webkitpy/layout_tests/models/test_configuration_unittest.py: Added unit tests.

2011-07-23  Dimitri Glazkov  <dglazkov@chromium.org>

        Extract TestConfiguration from base and write a few unit tests to capture current behavior.
        https://bugs.webkit.org/show_bug.cgi?id=65066

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_configuration.py: Added.
        * Scripts/webkitpy/layout_tests/models/test_configuration_unittest.py: Added.
        * Scripts/webkitpy/layout_tests/port/base.py: Moved code to test_configuration.py

2011-07-23  Alok Priyadarshi  <alokp@chromium.org>

        Switching off acceleration for small canvas broke gpu tests
        https://bugs.webkit.org/show_bug.cgi?id=65053

        Reviewed by Stephen White.

        * DumpRenderTree/chromium/WebPreferences.cpp:
        (WebPreferences::reset):
        (WebPreferences::applyTo):
        * DumpRenderTree/chromium/WebPreferences.h:

2011-07-23  Keith Kyzivat  <keith.kyzivat@nokia.com>

        [Qt] Add option to turn on disk caching in QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=65007

        Reviewed by Noam Rosenthal.

        Add menu item and command line option to turn on disk caching in
        QtTestBrowser. Simple QNetworkDiskCache added to the page's
        QNetworkAccssManager.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::initializeView):
        (LauncherWindow::createChrome):
        (LauncherWindow::setDiskCache):
        * QtTestBrowser/launcherwindow.h:
        (WindowOptions::WindowOptions):
        * QtTestBrowser/main.cpp: