@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="butterbar"><span class="status">Loading...</span></div>
-<div class="alert"><span class="status"></span></div>
+<div class="infobar"><span class="status"></span></div>
 <div class="recent-history"></div>
 <div class="results">
     <div class="content"></div>
